@@ -1,3 +1,3 @@
-EBUILD mangler-9999.ebuild 743 RMD160 7b6f55a0cb71c1d6aba7f50d7dd1f5808e7c6395 SHA1 ed855185cf97f4981f7cfd1c828ceae00ede42c0 SHA256 c2f250a06ff4e73fe6d45d1b4041e5347767490f3d05ceb94d3cc145e71fca96
-MISC ChangeLog 711 RMD160 f6612c66746fa2aafa6669b62c868cfaad4e8830 SHA1 dbb67eb9f75a429e6c61506010ad1e8da0a4a434 SHA256 6610b90d8f37c7d0456bd1ae4748c55c3782559846c23e6d1b8d543132e53cf9
+EBUILD mangler-9999.ebuild 771 RMD160 0af5dd1c8d39dda8df436a507f685c091cd83968 SHA1 782283398a77b7e064e64982d5990b553d1c2f11 SHA256 d5ade9b152faf51afd5c18fe122c7ebe74f005b42d18cb25694710f08fca513e
+MISC ChangeLog 821 RMD160 ce4ae3b42f6cd4c20c0d8536c38a710f9ffeaad6 SHA1 0b918cf0bae9f21bae887c1fd5e479b464668e3d SHA256 0d753d9abc7972a98feebbd88fb112a6aef38d279f7ea5fa75f31d160aaca7af
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
